RESOLVED FIXED117369
Scrolling with platformWidget and delegateScrolling is incorrectly clamped
https://bugs.webkit.org/show_bug.cgi?id=117369
Summary Scrolling with platformWidget and delegateScrolling is incorrectly clamped
Benjamin Poulain
Reported 2013-06-07 22:09:16 PDT
Scrolling with platformWidget and delegateScrolling is incorrectly clamped
Attachments
Patch (3.21 KB, patch)
2013-06-07 22:15 PDT, Benjamin Poulain
no flags
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 (562.12 KB, application/zip)
2013-06-07 23:03 PDT, Build Bot
no flags
Patch (2.78 KB, patch)
2013-06-08 17:33 PDT, Benjamin Poulain
darin: review+
Benjamin Poulain
Comment 1 2013-06-07 22:15:33 PDT
Tim Horton
Comment 2 2013-06-07 22:23:21 PDT
Comment on attachment 204085 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204085&action=review > Source/WebCore/ChangeLog:14 > + we do not let those external scrolling handle the out of bound scrolling. external scrolling… what?
Benjamin Poulain
Comment 3 2013-06-07 22:26:50 PDT
Benjamin Poulain
Comment 4 2013-06-07 22:27:14 PDT
Check this up ^^, that will explain a bit :)
Build Bot
Comment 5 2013-06-07 23:03:23 PDT
Comment on attachment 204085 [details] Patch Attachment 204085 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/725418 New failing tests: fast/dom/rtl-scroll-to-leftmost-and-resize.html fast/block/positioning/vertical-rl/fixed-positioning.html fast/dom/horizontal-scrollbar-when-dir-change.html fast/dom/vertical-scrollbar-when-dir-change.html fast/dom/scroll-reveal-top-overflow.html fast/dom/scroll-reveal-left-overflow.html
Build Bot
Comment 6 2013-06-07 23:03:26 PDT
Created attachment 204086 [details] Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Benjamin Poulain
Comment 7 2013-06-08 17:33:36 PDT
Benjamin Poulain
Comment 8 2013-06-08 17:37:09 PDT
requestScrollPositionUpdate() is virtual. This makes more sense.
Darin Adler
Comment 9 2013-06-08 18:44:51 PDT
Comment on attachment 204103 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204103&action=review > Source/WebCore/platform/ScrollView.cpp:429 > + if (requestScrollPositionUpdate(newScrollPosition)) > + return; Any downside to calling this for non-frame views?
Benjamin Poulain
Comment 10 2013-06-08 18:57:00 PDT
(In reply to comment #9) > (From update of attachment 204103 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=204103&action=review > > > Source/WebCore/platform/ScrollView.cpp:429 > > + if (requestScrollPositionUpdate(newScrollPosition)) > > + return; > > Any downside to calling this for non-frame views? 3 jumps. The base implementation of requestScrollPositionUpdate() just return false. Thanks for the review.
Benjamin Poulain
Comment 11 2013-06-09 12:53:01 PDT
Note You need to log in before you can comment on or make changes to this bug.